# DL-applied-to-EEG-Change-Point-Detection

./: .gitignore  README.md  cpd_legacy_core.py  pyproject.toml  requirements.txt
configs/: config.example.json  selected_subjects.example.json
legacy/: CPD_visualizaed_original.py  CPD_visualized_original.py  README.md
matlab/: xfyp_data_modified.m
notebooks/: eeg_cpd_workflow.ipynb
scripts/: run_modular.py  run_script.py
src/eeg_cpd/: __init__.py  _core.py  change_point.py  config.py  data.py  inference.py  models.py  pipeline.py  preprocessing.py  training.py  visualization.py
